
- For all wxInputStreams, Eof() becomes true after an attempt has been made
  to read _past_ the end of file.
- wxFileName::DirExists() checks if the path of the file is a directory, not
  if the whole name is a directory.
- wxDialog::CreateButtonSizer() may return NULL now, please see the manual.
- wxStaticBoxSizer now deletes the associated wxStaticBox when it is deleted.
- Windows calling CaptureMouse() are now required to handle the
  wxEVT_MOUSE_CAPTURE_LOST event and not call ReleaseMouse() in this case.


Changes in behaviour which may result in compilation errors
-----------------------------------------------------------

- wxFontData::GetColour() now returns a const colour.
- wxDC objects can't be created directly now (this never worked, now it doesn't
  even compile).
- wxCHECK family of macros now must be followed by a semicolon.
- wxMBConv::cMB2WC() and cWC2MB() take size of the input buffer and return
  length of the converted string in all cases now.
- wxHtmlWindow::OnCellClicked() now returns bool.
- wxHtmlCell::OnMouseClick() was deprecated and replaced with
  wxHtmlCell::ProcessMouseClick(); old code overriding OnMouseClick() will
  continue to work with WXWIN_COMPATIBILITY_2_6, but should be rewritten to
  use ProcessMouseClick().
- wxHtmlCell::GetCursor() was deprecated and replaced with
  wxHtmlCell::GetMouseCursor(); old code overriding GetCursor() will
  continue to work with WXWIN_COMPATIBILITY_2_6, but should be rewritten to
  use GetMouseCursor().
- wxHtmlCell::AdjustPagebreak() signature has changed, update your code if you
  override it.
- wxFontEnumerator::GetFacenames() and GetEncodings() now return arrays and
  not pointers to arrays.
- SetDefaultItem() method was moved from wxPanel to wxTopLevelWindow
- wxDialog::OnOK/OnCancel() don't exist any more, use SetAffirmative/EscapeId()
- wxPathList doesn't derive from (deprecated) wxStringList any more
- wxGLContext class has no 1:1 coupling to a wxGLCanvas class any more.